--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     ext {
         compose_ui_version = '1.2.0'
+        hilt_version = '2.40'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
@@ -8,4 +9,5 @@ plugins {
     id 'com.android.library' version '7.4.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
     id 'com.google.gms.google-services' version '4.4.1' apply false
+    id 'com.google.dagger.hilt.android' version '2.44' apply false
 }
