--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ buildscript {
     ext {
         compose_ui_version = '1.2.0'
         hilt_version = '2.44'
+        gson_version = '2.10.1'
+        moshi_version = '1.11.0'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
